<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introd"
            android:textSize="20dp"
            android:textColor="@color/blue"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/op1"
                android:textSize="25dp"
                android:textColor="@color/orangered"/>
            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:id="@+id/eop1"
                android:textSize="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/op2"
                android:textSize="25dp"
                android:textColor="@color/orangered"/>
            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:id="@+id/eop2"
                android:textSize="25dp"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15sp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/suma"
                android:onClick="onRadioButtonClicked"
                android:text="@string/suma"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resta"
                android:onClick="onRadioButtonClicked"
                android:text="@string/resta"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mult"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mult"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/div"
                android:onClick="onRadioButtonClicked"
                android:text="@string/div"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:id="@+id/bmostrar"
            android:onClick="mostrar"
            android:text="@string/boton1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trespuesta"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:textColor="@color/goldenrod"
            android:textSize="65dp"/>
    </LinearLayout>
</RelativeLayout>
